# dungeon

./: .gitignore  CONTROLS.md  GEMINI.md  LICENSE  README.ko.md  README.md  SKILLS.md  Start.py  Start.py.old  UI_TODO.md  WHITE_PAPER.ko.md  WHITE_PAPER.md  api_usage_log.json  bug.md  check_classes.py  check_loot.py  combat.py  data_manager.py  dungeon_crawler.py  dungeon_map.py  fix_imports.py  floor_progression_results.txt  game.py  history.txt  inject_mock_rankings.py  inventory.py  items.py  items.txt  main.py  monster.py  monster_data.txt  player.py  sandbox_test.py  sfx_extractor.py  sim_boss_battle.py  sim_final_report.txt  sim_final_report_v2.txt  sim_final_report_v3.txt  sim_floor_progression.py  sim_output.txt  (+29 more)
back/: GEMINI.md
data/: Boss.csv  classes.csv  items.csv  items.txt  map.csv  maps.csv  monster_data.txt  monster_stats.csv  monsters.csv  prefixes.json  skills.csv  skills.txt  suffixes.json  traps.txt
docs/: TRANSLATION_GUIDE.md  ability_flags.md  mydocs.txt
dungeon/: .gitignore  LICENSE  README.ko.md  README.md  Start.py  apply_balance_patch.py  balance_report.md  balance_simulator.py  balance_tuner.py  calc_level.py  check_bonus_points.py  check_loot.py  check_sandbox_features.py  component.py  components.py  config.py  constants.py  data_manager.py  ecs.py  engine.py  entity.py  events.py  inventory.py  items.py  localization.py  map.py  map_manager.py  modifiers.py  monster.py  player.py  renderer.py  ui.py  (+7 more)
widget/rythmbox_plugins/: CMakeLists.txt  GEMINI.md  MusicWidget.cpp  MusicWidget.h\  config.py  main.cpp  main.py  style.css  widget.py
(+68 files in other folders)
